--- a/jQuerySite/WebContent/jQueryAjax.html
+++ b/jQuerySite/WebContent/jQueryAjax.html
@@ -129,7 +129,9 @@
 				//1. 呼叫FirstServlet
 				//2. 傳 name=Jack及age=30的資料給FirstServlet
 				//3. 將Server端回傳的結果加上h2的標籤,顯示在show的div中
-
+$.get("FirstServlet",{"name":"Jack","age":30},function(data){
+	$("#msg").html("<h2>"+data+"</h2>");
+})
 			});
 
 			$('#buttonPost').click(function() {
