--- a/jQuerySite/WebContent/jQueryAjax.html
+++ b/jQuerySite/WebContent/jQueryAjax.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/lightbox.css">
 <style>
-  .thumb{width:120px}
+.thumb {
+	width: 120px
+}
 </style>
 </head>
 <body>
@@ -40,15 +42,15 @@
 					<a href="jQuerySelectors.html" class="list-group-item">jQuerySelectors</a>
 					<a href="jQueryDOM.html" class="list-group-item">jQueryDOM</a> <a
 						href="jQueryCSS.html" class="list-group-item">jQueryCSS</a> <a
-						href="jQueryEach.html" class="list-group-item">jQueryEach</a> 
-					 <a href="resize.html" class="list-group-item" target="_blank">jQueryEvent</a>
-  <a href="jQueryEvent.html" class="list-group-item">jQueryEventBinding</a> <a
-						href="jQueryEffects.html" class="list-group-item">jQueryEffects</a>
+						href="jQueryEach.html" class="list-group-item">jQueryEach</a> <a
+						href="resize.html" class="list-group-item" target="_blank">jQueryEvent</a>
+					<a href="jQueryEvent.html" class="list-group-item">jQueryEventBinding</a>
+					<a href="jQueryEffects.html" class="list-group-item">jQueryEffects</a>
 					<a href="jQueryAjax.html" class="list-group-item">jQueryAjax</a> <a
-						href="jQueryUI.html" class="list-group-item">jQueryUI</a>
-<a href="jQueryPlugin_DataTables.html" class="list-group-item">jQueryPlugin</a>
-  <a href="Register.html" class="list-group-item">作業</a>
-  <a href="Products.html" class="list-group-item">練習</a>
+						href="jQueryUI.html" class="list-group-item">jQueryUI</a> <a
+						href="jQueryPlugin_DataTables.html" class="list-group-item">jQueryPlugin</a>
+					<a href="Register.html" class="list-group-item">作業</a> <a
+						href="Products.html" class="list-group-item">練習</a>
 				</div>
 			</div>
 			<div class="col-md-9">
@@ -57,15 +59,17 @@
 						<h3>jQuery Ajax</h3>
 					</div>
 					<!-- 每頁不同的內容從這裡開始 -->
-					<input type="button" value="get" id="buttonGet" class="btn btn-primary"> 
-					<input type="button" value="post" id="buttonPost" class="btn btn-success">
-					<input type="button" value="getJSON" id="buttonGetJSON" class="btn btn-info"> 
-					<input type="button" value="ajax-xml" id="buttonAjax" class="btn btn-danger"> 
-					<img src="images/ajax-loader.gif" id="img1">
+					<input type="button" value="get" id="buttonGet"
+						class="btn btn-primary"> <input type="button" value="post"
+						id="buttonPost" class="btn btn-success"> <input
+						type="button" value="getJSON" id="buttonGetJSON"
+						class="btn btn-info"> <input type="button"
+						value="ajax-xml" id="buttonAjax" class="btn btn-danger"> <img
+						src="images/ajax-loader.gif" id="img1">
 					<hr>
 					<div id="show" class="row"></div>
 					<hr>
-					
+
 
 					<!-- 每頁不同的內容到這裡結束 -->
 				</div>
@@ -117,7 +121,7 @@
 	</div>
 	<!-- /container -->
 
-   <!-- http://lokeshdhakar.com/projects/lightbox2/ -->
+	<!-- http://lokeshdhakar.com/projects/lightbox2/ -->
 	<script src="js/jquery-1.12.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/lightbox.js"></script>
@@ -129,9 +133,12 @@
 				//1. 呼叫FirstServlet
 				//2. 傳 name=Jack及age=30的資料給FirstServlet
 				//3. 將Server端回傳的結果加上h2的標籤,顯示在show的div中
-$.get("FirstServlet",{"name":"Jack","age":30},function(data){
-	$("#msg").html("<h2>"+data+"</h2>");
-})
+				$.get("FirstServlet", {
+					"name" : "Jack",
+					"age" : 30
+				}, function(data) {
+					$("#msg").html("<h2>" + data + "</h2>");
+				})
 			});
 
 			$('#buttonPost').click(function() {
@@ -142,7 +149,6 @@ $.get("FirstServlet",{"name":"Jack","age":30},function(data){
 
 			});
 
-
 			$('#buttonGetJSON').click(function() {
 				//練習三使用getJSON()
 				//1. 呼叫apiln.json
@@ -150,8 +156,7 @@ $.get("FirstServlet",{"name":"Jack","age":30},function(data){
 				//3. 將景點圖片顯示在show的div中
 
 			});
-			
-			
+
 			$('#buttonAjax').click(function() {
 				//練習四使用ajax()
 				//1. 呼叫travel.xml
