--- a/jQuerySite/WebContent/Register.html
+++ b/jQuerySite/WebContent/Register.html
@@ -153,7 +153,11 @@
         		$('#span1>span').removeClass("glyphicon glyphicon-question-sign")
             	.removeClass("glyphicon glyphicon-remove-sign")
             	.addClass("glyphicon glyphicon-ok-sign")
-        	};
+        	}else{
+        		$('#span1>span').removeClass("glyphicon glyphicon-ok-sign")
+            	.removeClass("glyphicon glyphicon-remove-sign")
+            	.addClass("glyphicon glyphicon-question-sign")
+        	}
         });
         });
         });
